# monorepo-release-manager-demo

./: .releaseManagerConfig  README.md  mise.toml
be/auth/: .changelock  CHANGELOG.md  README.md  go.mod  main.go
be/auth/cmd/: root.go  serve.go
be/auth/internal/auth/: handler.go
be/order/: .changelock  .env.example  CHANGELOG.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
be/order/app/: __init__.py  main.py
be/order/app/api/v1/: __init__.py
be/order/app/api/v1/endpoints/: orders.py
be/order/app/db/: session.py
be/order/app/models/: order.py
be/order/app/repositories/: order_repository.py
be/order/app/schemas/: order.py
be/order/app/services/: order_service.py
be/order/tests/: test_orders.py
be/payment/: .changelock  CHANGELOG.md  README.md  pom.xml
be/payment/src/main/java/com/example/payment/: PaymentApplication.java
be/payment/src/main/java/com/example/payment/api/: CreatePaymentRequest.java  PaymentController.java
be/payment/src/main/java/com/example/payment/model/: Payment.java
be/payment/src/main/resources/: application.properties
fe/desktop/admin-client/: .changelock  README.md  index.html  package.json  renderer.js
fe/desktop/manager-client/: .changelock  README.md  index.html  main.js  package.json  preload.js
fe/mobile/: .changelock  App.js  README.md  package.json
fe/mobile/android/app/: build.gradle
fe/mobile/ios/: Config.xcconfig
fe/web/: .changelock  README.md  index.html  package.json  vite.config.js
fe/web/src/: App.jsx  index.css
(+1 files in other folders)
