[tool]
name = "order_management"
version = "0.1.0"
description = "A service for managing orders"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
alembic = "^1.7.5"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"

[dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.19.0"
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"